# ActionTests

./: CMakeLists.txt  action.yml  main.cpp  matho.cpp  matho.hpp  tests.cpp
.github/: pull_request_template.md
.github/workflows/: cmake-single-platform.yml  test.yml
